# rpaca

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: account_configurations.rs  auth.rs  get_account_info.rs  lib.rs  positions.rs  request.rs  watchlists.rs
src/market_data/: mod.rs
src/market_data/v2/: crypto_websocket.rs  mod.rs  stock.rs  stock_websocket.rs
src/trading/: mod.rs
src/trading/v2/: account_activities.rs  account_configurations.rs  assets.rs  calendar.rs  clock.rs  crypto_funding.rs  get_account_info.rs  mod.rs  orders.rs  portfolio.rs  positions.rs  watchlists.rs
