[package]
name = "rpaca"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.141"
chrono = { version = "0.4", features = ["serde"] }
serde_urlencoded = "0.7.1"
uuid = { version = "1", features = ["serde", "v4"] }
serde_qs = "0.7"
strum_macros = "0.27.2"
strum = "0.27.2"