[package]
name = "rpaca"
version = "0.7.7"
edition = "2024"
authors = ["Jack Frambes <saver05@jackframbes.com>"]
description = "A rust crate wrapping the Alpaca API "
license = "MIT OR Apache-2.0"    # or another valid SPDX license
readme = "README.md"
repository = "https://github.com/Saver05/rpaca"
homepage = "https://github.com/Saver05/rpaca"
documentation = "https://docs.rs/rpaca"
keywords = ["api", "trading", "finance"]    # up to 5
categories = ["api-bindings", "finance", "asynchronous", "asynchronous"]
include = ["src/**/*", "LICENSE-MIT", "LICENSE-APACHE", "README.*", "CHANGELOG.*"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.0", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.141"
chrono = { version = "0.4", features = ["serde"] }
serde_urlencoded = "0.7.1"
uuid = { version = "1", features = ["serde", "v4"] }
serde_qs = "0.7"
strum_macros = "0.27.2"
strum = "0.27.2"
typed-builder = "0.21.0"